# iecompare

./: Dockerfile  LICENSE  README.md  docker-compose.yml  paper.py  pyproject.toml
data/: grades_graphframes.txt
iecompare/relik/: relation.py
